@@ -8,6 +8,6 @@ dist_m4data_DATA = \
 	slctests.m4
 
 dist_pkgdata_DATA = sl.mk slctests.mk slcvars.mk
-bin_SCRIPTS = sl-init-autoconf
+dist_bin_SCRIPTS = sl-init-autoconf
 
 
